--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,11 +1,22 @@
 name: Release
+
 on:
     workflow_dispatch:
     schedule:
         - cron: "0 0 * * 5"
+
+# Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
+permissions:
+    contents: write
+    pages: write
+    id-token: write
+
 jobs:
     release:
         name: Release
+        environment:
+            name: github-pages
+            url: ${{ steps.deployment.outputs.page_url }}
         runs-on: ubuntu-latest
         steps:
             - name: Checkout
@@ -27,7 +38,12 @@ jobs:
                   npm config set access public
                   npm install --no-save "@forsakringskassan/semantic-release-config"
                   npm exec semantic-release
-            - name: Deploy documentation
+            - name: Setup Pages
+              uses: actions/configure-pages@v5
+            - name: Upload artifact
               uses: actions/upload-pages-artifact@v3
               with:
                   path: public/
+            - name: Deploy to GitHub Pages
+              id: deployment
+              uses: actions/deploy-pages@v4
