docs: include docs-live-example docs in this site

--- a/docs/package.json
+++ b/docs/package.json
@@ -14,6 +14,7 @@
   "author": "Försäkringskassan",
   "devDependencies": {
     "@forsakringskassan/docs-generator": "file:..",
+    "@forsakringskassan/docs-live-example": "1.4.2",
     "vue": "3.4.21"
   },
   "engines": {
