--- a/package.json
+++ b/package.json
@@ -105,6 +105,7 @@
   },
   "devDependencies": {
     "@forsakringskassan/commitlint-config": "1.3.0",
+    "@forsakringskassan/docs-live-example": "1.4.2",
     "@forsakringskassan/eslint-config": "11.0.0",
     "@forsakringskassan/eslint-config-cli": "11.0.0",
     "@forsakringskassan/eslint-config-jest": "11.0.0",
