--- a/package.json
+++ b/package.json
@@ -108,6 +108,7 @@
     "@forsakringskassan/docs-live-example": "1.4.2",
     "@forsakringskassan/eslint-config": "11.0.0",
     "@forsakringskassan/eslint-config-cli": "11.0.0",
+    "@forsakringskassan/eslint-config-cypress": "11.0.0",
     "@forsakringskassan/eslint-config-jest": "11.0.0",
     "@forsakringskassan/eslint-config-typescript": "11.0.0",
     "@forsakringskassan/eslint-config-vue": "11.0.1",
@@ -126,6 +127,8 @@
     "@types/node": "16.18.96",
     "@types/nunjucks": "3.2.6",
     "@types/pug": "2.0.10",
+    "cypress": "13.7.3",
+    "cypress-html-validate": "6.1.0",
     "esbuild": "0.20.2",
     "express": "4.19.2",
     "html-minifier": "4.0.0",
