--- a/package.json
+++ b/package.json
@@ -91,6 +91,7 @@
     "cli-progress": "3.12.0",
     "execa": "8.0.1",
     "front-matter": "4.0.2",
+    "fs-extra": "11.2.0",
     "glob": "10.3.12",
     "highlight.js": "11.9.0",
     "livereload-js": "4.0.2",
@@ -121,6 +122,7 @@
     "@types/d3": "7.4.3",
     "@types/dompurify": "3.0.5",
     "@types/express": "4.17.21",
+    "@types/fs-extra": "11.0.4",
     "@types/glob": "8.1.0",
     "@types/jest": "29.5.12",
     "@types/markdown-it": "14.0.1",
