--- a/package.json
+++ b/package.json
@@ -118,6 +118,9 @@
     "@forsakringskassan/stylelint-config": "2.2.0",
     "@html-validate/release-scripts": "6.4.0",
     "@microsoft/api-extractor": "7.43.1",
+    "@rollup/plugin-commonjs": "25.0.7",
+    "@rollup/plugin-json": "6.1.0",
+    "@rollup/plugin-node-resolve": "15.2.3",
     "@types/cli-progress": "3.11.5",
     "@types/d3": "7.4.3",
     "@types/dompurify": "3.0.5",
@@ -141,6 +144,9 @@
     "lint-staged": "15.2.2",
     "npm-pkg-lint": "2.4.1",
     "npm-run-all2": "6.1.2",
+    "rollup": "4.16.4",
+    "rollup-plugin-esbuild": "6.1.1",
+    "rollup-plugin-visualizer": "5.12.0",
     "sass": "1.75.0",
     "ts-node": "10.9.2",
     "typescript": "5.4.5"
