--- a/package.json
+++ b/package.json
@@ -107,12 +107,12 @@
   "devDependencies": {
     "@forsakringskassan/commitlint-config": "1.3.2",
     "@forsakringskassan/docs-live-example": "1.4.5",
-    "@forsakringskassan/eslint-config": "11.0.5",
-    "@forsakringskassan/eslint-config-cli": "11.0.0",
-    "@forsakringskassan/eslint-config-cypress": "11.0.3",
-    "@forsakringskassan/eslint-config-jest": "11.0.0",
-    "@forsakringskassan/eslint-config-typescript": "11.0.6",
-    "@forsakringskassan/eslint-config-vue": "11.0.4",
+    "@forsakringskassan/eslint-config": "11.2.0",
+    "@forsakringskassan/eslint-config-cli": "11.2.0",
+    "@forsakringskassan/eslint-config-cypress": "11.2.0",
+    "@forsakringskassan/eslint-config-jest": "11.2.0",
+    "@forsakringskassan/eslint-config-typescript": "11.2.0",
+    "@forsakringskassan/eslint-config-vue": "11.2.0",
     "@forsakringskassan/jest-config": "29.5.5",
     "@forsakringskassan/prettier-config": "2.1.0",
     "@forsakringskassan/stylelint-config": "2.2.4",
@@ -132,6 +132,7 @@
     "@types/node": "16.18.101",
     "@types/nunjucks": "3.2.6",
     "@types/pug": "2.0.10",
+    "@types/semver": "7.5.8",
     "cypress": "13.12.0",
     "cypress-html-validate": "6.1.0",
     "esbuild": "0.21.5",
