--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,10 +23,7 @@ jobs:
             - name: Jest
               run: npm exec jest
             - name: Build
-              run: |
-                  npm run --if-present build
-                  npm pack
-                  npm exec npm-pkg-lint
+              run: npm run --if-present build
 
     cypress:
         name: Cypress E2E Tests
@@ -53,3 +50,24 @@ jobs:
                   name: cypress-screenshots
                   path: cypress/screenshots
                   if-no-files-found: ignore
+
+    npm-pkg-lint:
+        runs-on: ubuntu-latest
+        steps:
+            - uses: actions/checkout@v4
+            - uses: actions/cache@v4
+              with:
+                  path: ~/.cache/npm-pkg-lint
+                  key: npm-pkg-lint
+            - name: Use Node.js 20.x
+              uses: actions/setup-node@v4
+              with:
+                  node-version: 20.x
+            - name: Install dependencies
+              run: npm ci
+            - name: Build
+              run: npm run --if-present build
+            - name: npm-pkg-lint
+              run: |
+                  npm pack
+                  npm exec npm-pkg-lint
