--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "bugs": "https://github.com/Forsakringskassan/docs-generator/issues",
   "repository": {
     "type": "git",
-    "url": "https://github.com/Forsakringskassan/docs-generator.git"
+    "url": "git+https://github.com/Forsakringskassan/docs-generator.git"
   },
   "license": "MIT",
   "author": "Försäkringskassan",
@@ -145,7 +145,7 @@
     "is-ci": "3.0.1",
     "jest-environment-jsdom": "29.7.0",
     "lint-staged": "15.2.10",
-    "npm-pkg-lint": "2.4.1",
+    "npm-pkg-lint": "3.6.8",
     "npm-run-all2": "6.2.2",
     "rollup": "4.21.2",
     "rollup-plugin-esbuild": "6.1.1",
