--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,7 +17,7 @@ jobs:
             - name: Install dependencies
               run: npm ci
             - name: ESLint
-              run: npm run eslint
+              run: npm run eslint -- --max-warnings 0
             - name: Prettier
               run: npm run prettier:check
             - name: Jest
