--- a/package.json
+++ b/package.json
@@ -145,6 +145,7 @@
     "is-ci": "3.0.1",
     "jest-environment-jsdom": "29.7.0",
     "lint-staged": "15.2.10",
+    "memfs": "4.12.0",
     "npm-pkg-lint": "3.8.0",
     "npm-run-all2": "6.2.3",
     "rollup": "4.22.0",
