--- a/package.json
+++ b/package.json
@@ -125,6 +125,7 @@
     "@rollup/plugin-node-resolve": "15.3.0",
     "@types/cli-progress": "3.11.6",
     "@types/d3": "7.4.3",
+    "@types/dedent": "0.7.2",
     "@types/dompurify": "3.0.5",
     "@types/express": "5.0.0",
     "@types/fs-extra": "11.0.4",
@@ -137,6 +138,7 @@
     "@types/semver": "7.5.8",
     "cypress": "13.15.0",
     "cypress-html-validate": "6.1.0",
+    "dedent": "1.5.3",
     "esbuild": "0.24.0",
     "express": "4.21.0",
     "html-minifier": "4.0.0",
