--- a/package.json
+++ b/package.json
@@ -98,6 +98,7 @@
     "highlight.js": "11.10.0",
     "livereload-js": "4.0.2",
     "markdown-it": "14.1.0",
+    "markdown-it-deflist": "3.0.0",
     "mermaid": "11.2.1",
     "nunjucks": "3.2.4",
     "piscina": "4.7.0",
