refactor(deps): replace execa with nano-spawn

--- a/package.json
+++ b/package.json
@@ -91,7 +91,6 @@
     "@leeoniya/ufuzzy": "1.0.14",
     "chokidar": "3.6.0",
     "cli-progress": "3.12.0",
-    "execa": "9.3.1",
     "front-matter": "4.0.2",
     "fs-extra": "11.2.0",
     "glob": "11.0.0",
@@ -100,6 +99,7 @@
     "markdown-it": "14.1.0",
     "markdown-it-deflist": "3.0.0",
     "mermaid": "11.2.1",
+    "nano-spawn": "0.1.0",
     "nunjucks": "3.2.4",
     "piscina": "4.7.0",
     "scroll-into-view-if-needed": "3.1.0",
