--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -27,6 +27,8 @@ jobs:
               with:
                   node-version: 20.x
             - name: Install dependencies
+              env:
+                  HUSKY: 0
               run: npm ci
             - name: Build
               run: npm run --if-present build
@@ -34,6 +36,7 @@ jobs:
               env:
                   RELEASE: 1
                   NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
+                  HUSKY: 0
               run: |
                   npm config set access public
                   npm install --no-save "@forsakringskassan/semantic-release-config"
