--- a/.editorconfig
+++ b/.editorconfig
@@ -11,7 +11,7 @@ indent_size = 4
 insert_final_newline = true
 trim_trailing_whitespace = true
 
-[*.{html,vue,js,jsx,ts,tsx,scss,json}]
+[*.{html,vue,js,jsx,ts,tsx,mjs,cjs,scss,json}]
 indent_style = space
 indent_size = 4
 insert_final_newline = true
