--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -16,6 +16,8 @@ jobs:
     release:
         name: Release
         runs-on: ubuntu-latest
+        env:
+            HUSKY: 0
         steps:
             - name: Checkout
               uses: actions/checkout@v4
@@ -27,16 +29,14 @@ jobs:
               with:
                   node-version: 20.x
             - name: Install dependencies
-              env:
-                  HUSKY: 0
               run: npm ci
             - name: Build
               run: npm run --if-present build
             - name: Release
               env:
                   RELEASE: 1
+                  GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
                   NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
-                  HUSKY: 0
               run: |
                   npm config set access public
                   npm install --no-save "@forsakringskassan/semantic-release-config"
