fix: show vue compiler errors runtime during local builds

--- a/internal/plugin-vue3/package.json
+++ b/internal/plugin-vue3/package.json
@@ -22,7 +22,8 @@
     "build": "node build.mjs"
   },
   "dependencies": {
-    "esbuild-plugin-vue3": "0.4.2"
+    "esbuild-plugin-vue3": "0.4.2",
+    "is-ci": "4.1.0"
   },
   "devDependencies": {
     "@types/html-minifier": "4.0.5",
