--- a/package.json
+++ b/package.json
@@ -106,10 +106,12 @@
     ]
   },
   "dependencies": {
+    "@babel/code-frame": "^7.0.0",
     "@leeoniya/ufuzzy": "1.0.18",
     "chokidar": "4.0.3",
     "cli-progress": "3.12.0",
     "dedent": "1.5.3",
+    "fastest-levenshtein": "1.0.16",
     "front-matter": "4.0.2",
     "fs-extra": "11.3.0",
     "glob": "11.0.1",
@@ -143,6 +145,7 @@
     "@rollup/plugin-commonjs": "28.0.2",
     "@rollup/plugin-json": "6.1.0",
     "@rollup/plugin-node-resolve": "16.0.0",
+    "@types/babel__code-frame": "7.0.6",
     "@types/cli-progress": "3.11.6",
     "@types/d3": "7.4.3",
     "@types/dedent": "0.7.2",
@@ -192,6 +195,7 @@
     "node": ">= 20.5"
   },
   "externalDependencies": [
+    "@babel/code-frame",
     "livereload-js",
     "nunjucks",
     "piscina",
