feat: generate diff by diffing two examples

--- a/internal/plugin-vue3/tsconfig.json
+++ b/internal/plugin-vue3/tsconfig.json
@@ -2,6 +2,7 @@
     "extend": "../../tsconfig.json",
     "compilerOptions": {
         "emitDeclarationOnly": true,
+        "lib": ["es2023", "dom", "dom.iterable", "es2018.intl"],
         "declaration": true,
         "rootDir": "src",
         "outDir": "dist",
