--- a/package.json
+++ b/package.json
@@ -111,6 +111,7 @@
     "chokidar": "4.0.3",
     "cli-progress": "3.12.0",
     "dedent": "1.5.3",
+    "diff": "7.0.0",
     "fastest-levenshtein": "1.0.16",
     "front-matter": "4.0.2",
     "fs-extra": "11.3.0",
@@ -149,6 +150,7 @@
     "@types/cli-progress": "3.11.6",
     "@types/d3": "7.4.3",
     "@types/dedent": "0.7.2",
+    "@types/diff": "7.0.1",
     "@types/express": "5.0.0",
     "@types/fs-extra": "11.0.4",
     "@types/glob": "8.1.0",
