--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,7 @@
         "outDir": "./dist",
         "emitDeclarationOnly": true,
         "target": "es2022",
-        "lib": ["es2023", "dom", "dom.iterable"],
+        "lib": ["es2023", "dom", "dom.iterable", "es2018.intl"],
         "module": "esnext",
         "alwaysStrict": true,
         "declaration": true,
