--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -6,12 +6,6 @@ on:
     schedule:
         - cron: "0 0 * * 5"
 
-# Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
-permissions:
-    contents: write
-    pages: write
-    id-token: write
-
 jobs:
     release:
         name: Release
@@ -35,7 +29,7 @@ jobs:
             - name: Release
               env:
                   RELEASE: 1
-                  GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+                  GITHUB_TOKEN: ${{ secrets.RELEASE_KEY }}
                   NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
               run: |
                   npm config set access public
