--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -6,6 +6,12 @@ on:
     schedule:
         - cron: "0 0 * * 5"
 
+# Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
+permissions:
+    contents: write
+    pages: write
+    id-token: write
+
 jobs:
     release:
         name: Release
@@ -29,7 +35,7 @@ jobs:
             - name: Release
               env:
                   RELEASE: 1
-                  GITHUB_TOKEN: ${{ secrets.RELEASE_KEY }}
+                  GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
                   NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
               run: |
                   npm config set access public
