--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
   "scripts": {
     "prebuild": "npm run --workspaces --if-present build",
     "build": "tsc && node build.mjs",
-    "postbuild": "node generate-docs.mjs",
+    "postbuild": "node generate-docs.mjs && html-validate public",
     "build:docs": "node generate-docs.mjs",
     "eslint": "eslint --cache .",
     "eslint:fix": "eslint --fix .",
@@ -165,6 +165,7 @@
     "esbuild": "0.24.2",
     "express": "4.21.2",
     "html-minifier": "4.0.0",
+    "html-validate": "9.2.1",
     "http-server": "14.1.1",
     "husky": "9.1.7",
     "is-ci": "4.1.0",
