feat: support rendering symbols from API Extractor models

--- a/package.json
+++ b/package.json
@@ -128,6 +128,7 @@
     "@babel/traverse": "^7.0.0",
     "@fontsource-variable/inter": "5.2.8",
     "@leeoniya/ufuzzy": "1.0.19",
+    "@microsoft/api-extractor-model": "7.30.3",
     "chokidar": "5.0.0",
     "cli-progress": "3.12.0",
     "dedent": "1.7.1",
@@ -165,6 +166,7 @@
     "@forsakringskassan/stylelint-config": "3.3.0",
     "@html-validate/release-scripts": "7.1.0",
     "@microsoft/api-extractor": "7.55.5",
+    "@microsoft/tsdoc": "0.15.1",
     "@rollup/plugin-commonjs": "29.0.0",
     "@rollup/plugin-json": "6.1.0",
     "@rollup/plugin-node-resolve": "16.0.3",
@@ -204,6 +206,7 @@
     "esbuild": "0.x",
     "express": "^4 || ^5.0.0",
     "he": "^1.2",
+    "prettier": "^3.0.0",
     "sass": "^1.71",
     "vue": "^3.0.0"
   },
@@ -224,6 +227,8 @@
     "@babel/parser",
     "@babel/traverse",
     "@fontsource-variable/inter",
+    "@microsoft/api-extractor-model",
+    "@microsoft/tsdoc",
     "livereload-js",
     "nunjucks",
     "piscina",
