--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
 {
     "compilerOptions": {
-        "rootDir": "./src",
+        "rootDirs": ["./src", "./docs/markdown/api"],
         "outDir": "./dist",
         "emitDeclarationOnly": true,
         "target": "es2022",
@@ -20,5 +20,5 @@
         "sourceMap": true,
         "skipLibCheck": true
     },
-    "include": ["./src/**/*.ts"]
+    "include": ["./src/**/*.ts", "./docs/markdown/api/**/*.ts"]
 }
