chore(deps): force esbuild-plugin-vue3 to use proper esbuild version

--- a/package.json
+++ b/package.json
@@ -205,6 +205,9 @@
     "vue-docgen-api"
   ],
   "overrides": {
+    "esbuild-plugin-vue3": {
+      "esbuild": "$esbuild"
+    },
     "nunjucks": {
       "chokidar": "$chokidar"
     }
