--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -6,12 +6,6 @@ on:
     schedule:
         - cron: "0 0 * * 5"
 
-# Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
-permissions:
-    contents: write
-    pages: write
-    id-token: write
-
 jobs:
     release:
         name: Release
@@ -19,11 +13,24 @@ jobs:
         env:
             HUSKY: 0
         steps:
+            - uses: actions/create-github-app-token@v1
+              id: app-token
+              with:
+                  app-id: ${{ vars.RELEASE_APP_ID }}
+                  private-key: ${{ secrets.RELEASE_APP_KEY }}
             - name: Checkout
               uses: actions/checkout@v4
               with:
                   fetch-depth: 0
-                  ssh-key: "${{ secrets.RELEASE_KEY }}"
+                  token: ${{ steps.app-token.outputs.token }}
+            - name: Get GitHub App User ID
+              id: get-user-id
+              env:
+                  GH_TOKEN: ${{ steps.app-token.outputs.token }}
+                  GIT_AUTHOR_NAME: ${{ steps.app-token.outputs.app-slug }}[bot]
+              run: |
+                  echo "GIT_AUTHOR_NAME=${GIT_AUTHOR_NAME}" | tee -a $GITHUB_ENV
+                  echo "GIT_AUTHOR_EMAIL=$(gh api "/users/${GIT_AUTHOR_NAME}" --jq .id)+${GIT_AUTHOR_NAME}@users.noreply.github.com" | tee -a $GITHUB_ENV
             - name: Setup Node.js
               uses: actions/setup-node@v4
               with:
@@ -35,9 +42,17 @@ jobs:
             - name: Release
               env:
                   RELEASE: 1
-                  GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+                  GITHUB_TOKEN: ${{ steps.app-token.outputs.token }}
                   NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
               run: |
                   npm config set access public
                   npm install --no-save "@forsakringskassan/semantic-release-config"
                   npm exec semantic-release
+                  sleep 5
+                  git log -n 1
+                  git status
+
+    deploy-documentation:
+        needs: [release]
+        name: Deploy new documentation
+        uses: ./.github/workflows/docs.yml
