--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     ".": "./dist/index.js",
     "./markdown": "./dist/markdown.js",
     "./runtime": "./dist/runtime.js",
+    "./docs": "./dist/style/index.css",
     "./docs.css": "./dist/style/index.css",
+    "./style": "./dist/style/index.css",
     "./style.css": "./dist/style/index.css",
     "./style/*.css": "./dist/style/*.css"
   },
@@ -140,6 +142,7 @@
     "@forsakringskassan/eslint-config-vue": "11.8.1",
     "@forsakringskassan/jest-config": "29.6.1",
     "@forsakringskassan/prettier-config": "3.0.5",
+    "@forsakringskassan/sass-module-importer": "1.1.3",
     "@forsakringskassan/stylelint-config": "2.4.3",
     "@html-validate/release-scripts": "6.8.0",
     "@microsoft/api-extractor": "7.52.2",
