--- a/.prettierignore
+++ b/.prettierignore
@@ -19,6 +19,7 @@ public/
 # ignore templates with explicit nunjucks extension as prettier often messes upp
 # nunjucks formatting (it sees it as text nodes)
 *.njk.html
+templates/macro/*.html
 
 # not parsable as json (but the output it generates is)
 templates/json.template.json
