--- a/.prettierignore
+++ b/.prettierignore
@@ -20,6 +20,7 @@ public/
 # nunjucks formatting (it sees it as text nodes)
 *.njk.html
 templates/macro/*.html
+templates/component.template.html
 
 # not parsable as json (but the output it generates is)
 templates/json.template.json
