--- a/package.json
+++ b/package.json
@@ -109,6 +109,8 @@
   },
   "dependencies": {
     "@babel/code-frame": "^7.0.0",
+    "@babel/parser": "^7.0.0",
+    "@babel/traverse": "^7.0.0",
     "@leeoniya/ufuzzy": "1.0.18",
     "chokidar": "4.0.3",
     "cli-progress": "3.12.0",
@@ -132,6 +134,7 @@
     "vue-docgen-api": "4.79.2"
   },
   "devDependencies": {
+    "@babel/types": "7.27.0",
     "@forsakringskassan/commitlint-config": "1.4.2",
     "@forsakringskassan/docs-live-example": "2.0.0",
     "@forsakringskassan/eslint-config": "11.9.1",
@@ -201,6 +204,8 @@
   },
   "externalDependencies": [
     "@babel/code-frame",
+    "@babel/parser",
+    "@babel/traverse",
     "livereload-js",
     "nunjucks",
     "piscina",
