refactor: use a worker thread instead of spawning process
should give a slight performance boost on windows but most of all it enables to
return and aggregate results easier

--- a/package.json
+++ b/package.json
@@ -140,7 +140,6 @@
     "markdown-it": "14.1.0",
     "markdown-it-deflist": "3.0.0",
     "mermaid": "11.6.0",
-    "nano-spawn": "0.2.0",
     "nunjucks": "3.2.4",
     "scroll-into-view-if-needed": "3.1.0",
     "semver": "7.7.1",
@@ -166,6 +165,7 @@
     "@rollup/plugin-commonjs": "28.0.3",
     "@rollup/plugin-json": "6.1.0",
     "@rollup/plugin-node-resolve": "16.0.1",
+    "@sidvind/rollup-plugin-worker": "1.0.0",
     "@types/babel__code-frame": "7.0.6",
     "@types/cli-progress": "3.11.6",
     "@types/d3": "7.4.3",
