--- a/package.json
+++ b/package.json
@@ -136,6 +136,7 @@
     "glob": "11.0.2",
     "highlight.js": "11.11.1",
     "i18next": "25.0.2",
+    "import-meta-resolve": "4.1.0",
     "livereload-js": "4.0.2",
     "markdown-it": "14.1.0",
     "markdown-it-deflist": "3.0.0",
