--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -4,6 +4,10 @@ concurrency: deploy-${{ github.ref }}
 on:
     workflow_dispatch:
     workflow_call:
+
+permissions:
+    contents: read
+
 jobs:
     docs:
         name: Deploy
@@ -12,6 +16,8 @@ jobs:
         env:
             DST_REMOTE: origin
             DST_BRANCH: gh-pages
+        permissions:
+            contents: write
         steps:
             - name: Checkout
               uses: actions/checkout@v4
