--- a/.github/workflows/pr-preview.yml
+++ b/.github/workflows/pr-preview.yml
@@ -1,5 +1,6 @@
 name: Deploy PR previews
 concurrency: preview-${{ github.ref }}
+
 on:
     pull_request:
         types:
@@ -7,10 +8,17 @@ on:
             - reopened
             - synchronize
             - closed
+
+permissions:
+    contents: read
+
 jobs:
     deploy-docs-preview:
         if: github.event.pull_request.head.repo.full_name == github.repository && github.actor != 'dependabot[bot]'
         runs-on: ubuntu-latest
+        permissions:
+            contents: write
+            pull-requests: write
         steps:
             - name: Checkout
               uses: actions/checkout@v4
