--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -6,12 +6,19 @@ on:
     schedule:
         - cron: "0 0 * * 5"
 
+permissions:
+    contents: read
+
 jobs:
     release:
         name: Release
         runs-on: ubuntu-latest
         env:
             HUSKY: 0
+        permissions:
+            contents: write
+            issues: write
+            pull-requests: write
         steps:
             - uses: actions/create-github-app-token@v2
               id: app-token
