--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -19,6 +19,7 @@ jobs:
             contents: write
             issues: write
             pull-requests: write
+            id-token: write
         steps:
             - uses: actions/create-github-app-token@v2
               id: app-token
