--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -7,6 +7,7 @@ permissions:
 
 jobs:
     lint:
+        name: Lint
         runs-on: ubuntu-latest
         steps:
             - uses: actions/checkout@v4
@@ -23,8 +24,21 @@ jobs:
               run: npm exec eslint -- --max-warnings 0 --ignore-pattern docs/examples/ .
             - name: Stylelint
               if: success() || failure()
-              run: npm run stylelint
+              run: npm run stylelint -- --max-warnings 0
             - name: Build
               run: npm run --if-present build
             - name: Lint examples
               run: npm exec eslint -- --max-warnings 0 docs/examples/
+
+    npm-pkg-lint:
+        runs-on: ubuntu-latest
+        steps:
+            - uses: actions/checkout@v4
+            - name: Use Node.js
+              uses: actions/setup-node@v4
+            - name: Install Dependencies
+              run: npm ci
+            - name: npm-pkg-lint
+              uses: ext/npm-pkg-lint@master
+              with:
+                  allow-dependencies: "@babel/parser,@babel/traverse"
