chore(deps): update @forsakringskassan/eslint monorepo to v13

--- a/internal/plugin-vue3/tsconfig.json
+++ b/internal/plugin-vue3/tsconfig.json
@@ -6,6 +6,7 @@
         "declaration": true,
         "rootDir": "src",
         "outDir": "dist",
-        "esModuleInterop": true
+        "esModuleInterop": true,
+        "strict": true
     }
 }
