--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -17,6 +17,8 @@ jobs:
                   node-version: 20.x
             - name: Install dependencies
               run: npm ci
+            - name: Build
+              run: npm run build
             - name: Prettier
               run: npm run prettier:check
             - name: ESLint
