feat: use inter as default font

--- a/package.json
+++ b/package.json
@@ -125,6 +125,7 @@
     "@babel/code-frame": "^7.0.0",
     "@babel/parser": "^7.0.0",
     "@babel/traverse": "^7.0.0",
+    "@fontsource-variable/inter": "5.2.8",
     "@leeoniya/ufuzzy": "1.0.19",
     "chokidar": "4.0.3",
     "cli-progress": "3.12.0",
@@ -221,6 +222,7 @@
     "@babel/code-frame",
     "@babel/parser",
     "@babel/traverse",
+    "@fontsource-variable/inter",
     "livereload-js",
     "nunjucks",
     "piscina",
