--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -7,62 +7,15 @@ on:
         - cron: "0 0 * * 5"
 
 permissions:
-    contents: read
+    contents: write
+    issues: write
+    pull-requests: write
+    id-token: write
 
 jobs:
     release:
-        name: Release
-        runs-on: ubuntu-latest
-        env:
-            HUSKY: 0
-        permissions:
-            contents: write
-            issues: write
-            pull-requests: write
-            id-token: write
-        steps:
-            - uses: actions/create-github-app-token@v2
-              id: app-token
-              with:
-                  app-id: ${{ vars.RELEASE_APP_ID }}
-                  private-key: ${{ secrets.RELEASE_APP_KEY }}
-            - name: Checkout
-              uses: actions/checkout@v6
-              with:
-                  fetch-depth: 0
-                  token: ${{ steps.app-token.outputs.token }}
-            - name: Get GitHub App User ID
-              id: get-user-id
-              env:
-                  GH_TOKEN: ${{ steps.app-token.outputs.token }}
-                  GIT_AUTHOR_NAME: ${{ steps.app-token.outputs.app-slug }}[bot]
-              run: |
-                  echo "GIT_AUTHOR_NAME=${GIT_AUTHOR_NAME}" | tee -a $GITHUB_ENV
-                  echo "GIT_AUTHOR_EMAIL=$(gh api "/users/${GIT_AUTHOR_NAME}" --jq .id)+${GIT_AUTHOR_NAME}@users.noreply.github.com" | tee -a $GITHUB_ENV
-            - name: Setup Node.js
-              uses: actions/setup-node@v6
-              with:
-                  node-version: 20.x
-            - name: Install dependencies
-              run: npm ci
-            - name: Build
-              run: npm run --if-present build
-            - name: Release
-              env:
-                  RELEASE: 1
-                  GITHUB_TOKEN: ${{ steps.app-token.outputs.token }}
-                  NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
-              run: |
-                  npm config set access public
-                  npm install --no-save "@forsakringskassan/semantic-release-config"
-                  npm exec semantic-release
-                  sleep 5
-                  git log -n 1
-                  git status
-
-    deploy-documentation:
-        needs: [release]
-        name: Deploy new documentation
-        permissions:
-            contents: write
-        uses: ./.github/workflows/docs.yml
+        uses: Forsakringskassan/.github/.github/workflows/npm-release.yml@main
+        with:
+            app-id: ${{ vars.RELEASE_APP_ID }}
+        secrets:
+            app-key: ${{ secrets.RELEASE_APP_KEY }}
