--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,5 +20,5 @@
         "sourceMap": true,
         "skipLibCheck": true
     },
-    "include": ["./src/**/*.ts"]
+    "include": ["./src/**/*.ts", "./src/**/*.vue", "docs/**/*.vue"]
 }
