test: add api-extractor test fixture for future tests

--- a/.prettierignore
+++ b/.prettierignore
@@ -11,6 +11,7 @@ dist/
 docs/examples/files/
 node_modules/
 .jest-cache/
+src/processors/api-extractor/__fixtures__/model.api.json
 src/style/_fonts.scss
 temp/
 test-results/
