--- a/package.json
+++ b/package.json
@@ -129,6 +129,7 @@
     "@babel/traverse": "^7.0.0",
     "@fontsource-variable/inter": "5.2.8",
     "@leeoniya/ufuzzy": "1.0.19",
+    "@microsoft/api-extractor-model": "7.32.2",
     "chokidar": "5.0.0",
     "cli-progress": "3.12.0",
     "dedent": "1.7.1",
@@ -168,6 +169,7 @@
     "@html-validate/release-scripts": "7.1.0",
     "@microsoft/api-extractor": "7.56.3",
     "@microsoft/api-extractor-model": "7.32.2",
+    "@microsoft/tsdoc": "0.16.0",
     "@rollup/plugin-commonjs": "29.0.0",
     "@rollup/plugin-json": "6.1.0",
     "@rollup/plugin-node-resolve": "16.0.3",
@@ -227,6 +229,8 @@
     "@babel/parser",
     "@babel/traverse",
     "@fontsource-variable/inter",
+    "@microsoft/api-extractor-model",
+    "@microsoft/tsdoc",
     "livereload-js",
     "nunjucks",
     "piscina",
